[gd_scene load_steps=4 format=3 uid="uid://4ew6bq6fks4e"]

[ext_resource type="Script" path="res://recycling_centres_near_you.gd" id="1_gbvpo"]
[ext_resource type="Texture2D" uid="uid://dwqfyqauorova" path="res://assets/tree4.jpg" id="2_jea6k"]
[ext_resource type="PackedScene" uid="uid://bmjdr6cb6hknx" path="res://v_box_container.tscn" id="3_6hw8d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gbvpo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jea6k")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Main Menu"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Location" type="TabBar" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer" instance=ExtResource("3_6hw8d")]
layout_mode = 2

[node name="Recycling centres" type="TabBar" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Recycling centres"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Recycling centres/MarginContainer"]
layout_mode = 2

[node name="Recycling_centres" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Recycling centres/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/Abia_CheckBox" to="." method="_on_abia_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Adamawa_CheckBox" to="." method="_on_adamawa_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/Akwa_ibom_CheckBox" to="." method="_on_akwa_ibom_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/Anambra_CheckBox" to="." method="_on_anambra_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5/Bauchi_CheckBox" to="." method="_on_bauchi_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer6/Bayelsa_CheckBox" to="." method="_on_bayelsa_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer7/Benue_CheckBox" to="." method="_on_benue_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer8/Borno_CheckBox" to="." method="_on_borno_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer9/Cross_River_CheckBox" to="." method="_on_cross_river_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer10/Delta_CheckBox" to="." method="_on_delta_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer11/Ebonyi_CheckBox" to="." method="_on_ebonyi_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer12/Edo_CheckBox" to="." method="_on_edo_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer13/Ekiti_CheckBox" to="." method="_on_ekiti_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer14/Enugu_CheckBox" to="." method="_on_enugu_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer15/FCT_Abuja_CheckBox" to="." method="_on_fct_abuja_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer16/Gombe_CheckBox" to="." method="_on_gombe_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer17/Imo_CheckBox" to="." method="_on_imo_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer18/Jigawa_CheckBox" to="." method="_on_jigawa_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer19/Kaduna_CheckBox" to="." method="_on_kaduna_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer20/Kano_CheckBox" to="." method="_on_kano_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer21/Katsina_CheckBox" to="." method="_on_katsina_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer22/Kebbi_CheckBox" to="." method="_on_kebbi_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer23/Kogi_CheckBox" to="." method="_on_kogi_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer24/Kwara_CheckBox" to="." method="_on_kwara_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer25/Lagos_CheckBox" to="." method="_on_lagos_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer26/Nasarawa_CheckBox" to="." method="_on_nasarawa_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer27/Niger_CheckBox" to="." method="_on_niger_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer28/Ogun_CheckBox" to="." method="_on_ogun_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer29/Ondo_CheckBox" to="." method="_on_ondo_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer30/Osun_CheckBox" to="." method="_on_osun_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer31/Oyo_CheckBox" to="." method="_on_oyo_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer32/Plateau_CheckBox" to="." method="_on_plateau_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer33/Rivers_CheckBox" to="." method="_on_rivers_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer34/Sokoto_CheckBox" to="." method="_on_sokoto_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer35/Taraba_CheckBox" to="." method="_on_taraba_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer36/Yobe_CheckBox" to="." method="_on_yobe_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer37/Zamfara_CheckBox" to="." method="_on_zamfara_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer38/Overseas_CheckBox" to="." method="_on_overseas_check_box_toggled"]

[editable path="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TabContainer/Location/MarginContainer/ScrollContainer/VBoxContainer"]
